# marmotta

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  KEYS  LICENSE.txt  MARMOTTA-584.patch  NOTICE.txt  README.md  README.txt  assembly.xml  license-mappings.xml  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md
client/: pom.xml
client/lmf-client-java/: pom.xml
client/lmf-client-js/: pom.xml
client/lmf-client-js-sample-webapp/: pom.xml
client/lmf-client-php/: pom.xml
client/marmotta-client-java/: pom.xml
client/marmotta-client-js/: pom.xml
client/marmotta-client-js-sample-webapp/: pom.xml
client/marmotta-client-php/: pom.xml
commons/: pom.xml
commons/marmotta-commons/: pom.xml
commons/marmotta-sesame-tools/: pom.xml
commons/sesame-commons/: pom.xml
commons/sesame-contextaware/: pom.xml
commons/sesame-filter/: pom.xml
commons/sesame-tools-facading/: pom.xml
commons/sesame-tools-rio-api/: pom.xml
commons/sesame-tools-rio-ical/: pom.xml
commons/sesame-tools-rio-jsonld/: pom.xml
commons/sesame-tools-rio-rdfa/: pom.xml
commons/sesame-tools-rio-rdfjson/: pom.xml
commons/sesame-tools-rio-rss/: pom.xml
commons/sesame-tools-rio-vcard/: pom.xml
commons/sesame-transactions/: pom.xml
commons/sesame-tripletable/: pom.xml
core/lmf-core/: pom.xml
extras/: README.txt  pom.xml
extras/webjars/: pom.xml
kiwi/: .project  README.txt  pom.xml
kiwi/kiwi-contextaware/: pom.xml
kiwi/kiwi-reasoner/: pom.xml
kiwi/kiwi-transactions/: .project
kiwi/kiwi-triplestore/: .project  mem.h2.db  mem.lock.db  pom.xml
kiwi/kiwi-tripletable/: pom.xml
kiwi/kiwi-versioning/: .project
launchers/: pom.xml
launchers/lmf-installer/: pom.xml
launchers/lmf-splash/: pom.xml
launchers/lmf-webapp/: pom.xml
launchers/marmotta-docker/: Dockerfile  README.md
launchers/marmotta-installer/: assembly.xml  pom.xml
launchers/marmotta-splash/: pom.xml
launchers/marmotta-webapp/: Dockerfile  LICENSE.txt  README.md  assembly.xml  pom.xml
launchers/marmotta-webapp-bigdata/: pom.xml
ldcache/: .project  README.txt  pom.xml
ldcache/ldcache-api/: .project
ldcache/ldcache-backend-ehcache/: pom.xml
ldcache/ldcache-backend-kiwi/: .project
ldcache/ldcache-core/: .project
ldcache/ldcache-sail/: .project
ldclient/: .project
ldclient/ldclient-api/: .project  pom.xml
ldclient/ldclient-core/: .project
ldclient/ldclient-provider-html/: .project  pom.xml
ldclient/ldclient-provider-ldap/: .project
ldclient/ldclient-provider-mediawiki/: .project  pom.xml
ldclient/ldclient-provider-phpbb/: .project
ldclient/ldclient-provider-rdf/: .project  pom.xml
ldclient/ldclient-provider-rdfa/: .project  pom.xml
ldclient/ldclient-provider-vimeo/: .project
ldclient/ldclient-provider-xml/: .project  pom.xml
ldclient/ldclient-provider-youtube/: .project  pom.xml
ldpath/: .project
ldpath/ldpath-api/: .project
ldpath/ldpath-backend-file/: .project  pom.xml
ldpath/ldpath-backend-jena/: .project
ldpath/ldpath-backend-linkeddata/: .project  pom.xml
ldpath/ldpath-backend-sesame/: .project
ldpath/ldpath-core/: .classpath  .project
ldpath/ldpath-functions-collections/: .project
ldpath/ldpath-functions-date/: .project  pom.xml
ldpath/ldpath-functions-html/: .project
ldpath/ldpath-functions-math/: .project
ldpath/ldpath-functions-text/: .project  pom.xml
ldpath/ldpath-functions-xml/: .classpath  .project  pom.xml
ldpath/ldpath-template/: .project
ldpath/ldpath-template-linkeddata/: .classpath  .project  pom.xml
libraries/: pom.xml
libraries/kiwi/: pom.xml
libraries/ldcache/: pom.xml
libraries/ldclient/: README.txt  pom.xml
libraries/ldpath/: pom.xml
libraries/ostrich/: Dockerfile  README.md  pom.xml
libraries/ostrich/backend/: CMakeLists.txt  Dockerfile  README.md
libraries/ostrich/backend/client/: CMakeLists.txt  client.cc
libraries/ostrich/backend/cmake/: FindLevelDB.cmake  FindRAPTOR.cmake  FindRasqal.cmake  FindRocksDB.cmake  FindTcmalloc.cmake
libraries/ostrich/backend/ldpath/: CMakeLists.txt  ldpath_model.cc  ldpath_model.h  parser_base.cc  parser_base.h
libraries/ostrich/backend/model/: CMakeLists.txt  model.proto  rdf_model.cc  rdf_model.h  rdf_namespaces.cc  rdf_namespaces.h  rdf_operators.cc  rdf_operators.h
libraries/ostrich/backend/parser/: CMakeLists.txt  rdf_parser.cc  rdf_parser.h
libraries/ostrich/backend/persistence/: CMakeLists.txt  base_persistence.cc  base_persistence.h  leveldb_persistence.cc  leveldb_persistence.h  leveldb_server.cc  leveldb_service.cc  leveldb_service.h  leveldb_sparql.cc  leveldb_sparql.h  marmotta_updatedb.cc  rocksdb_persistence.cc  rocksdb_persistence.h  rocksdb_server.cc
libraries/ostrich/backend/serializer/: CMakeLists.txt  serializer.cc  serializer.h  serializer_base.cc  serializer_base.h  serializer_proto.cc  serializer_proto.h  serializer_raptor.cc  serializer_raptor.h
libraries/ostrich/backend/service/: CMakeLists.txt  sail.proto  sparql.proto
libraries/ostrich/backend/sharding/: CMakeLists.txt  server.cc  sharding.cc  sharding.h
libraries/ostrich/backend/sparql/: CMakeLists.txt  rasqal_adapter.cc  rasqal_adapter.h  rasqal_model.cc  rasqal_model.h
libraries/ostrich/backend/test/: CMakeLists.txt  LevelDBTest.cc  NamespaceTest.cc  PersistenceTest.cc  SparqlTest.cc  StatementTest.cc  main.cc
libraries/ostrich/backend/util/: CMakeLists.txt  iterator.h  murmur3.cc  murmur3.h  raptor_util.cc  raptor_util.h  split.cc  split.h  threadpool.h  time_logger.cc  time_logger.h  unique.h
lmf-archetypes/: .project
lmf-client/: .project  pom.xml
lmf-client/lmf-client-java/: .project  (+1 more)
lmf-core/: .project
lmf-installer/: .project
lmf-ldcache/: .project  pom.xml
lmf-ldpath/: .project  pom.xml
lmf-reasoner/: .project  pom.xml
lmf-security/: .project
lmf-sparql/: .project  pom.xml
lmf-splash/: .project  pom.xml
lmf-user/: .project  pom.xml
lmf-versioning/: .project  pom.xml
lmf-webapp/: .classpath  .project  pom.xml
loader/: pom.xml
marmotta-commons/: .project
maven-plugins/: pom.xml
parent/: pom.xml
platform/: pom.xml
sesame/: .project
(+4068 files in other folders)
